kubernetes/client-pod.yaml
apiVersion: v1 # folder that contains certain resources that we can use
kind: Pod
metadata: # labelling our resource
  name: client-pod
  labels: # tag to enable us to interact with our pod i.e service with a pod
    app: client
spec: # specifications of our resource
  containers:
  - name: client
    image: alpine # imageinourdockerhub:version(optional)
    command: [ "sleep" ] # this & ..
    args: [ "infinity" ] # this commands fixed the crashloopbackoff error. Reason: the container kept being created and failing thus setting sleep to infinity allows the container to run for that specified time(infinity)
