kubernetes/server-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: server-pod
  labels:
    app: server
spec:
  containers:
    - name: server
      image: imageindocker
