kubernetes/client-srv.yaml
apiVersion: v1 # i.e pod, service,secret
kind: Service
metadata:
  name: client-srv
spec:
  type: NodePort # type of our service
  selector: # it interacts with specific resource i.e pod with label client
    app: client
  ports:
    - port: 3000 
      targePort: 3000 # port inside our pod container
      nodePort: 30007 # port to display in our browser. Should be in range 30000-32767
